--- a/src/me/drton/flightplot/FlightPlot.form
+++ b/src/me/drton/flightplot/FlightPlot.form
@@ -63,7 +63,7 @@
                           </component>
                         </children>
                       </scrollpane>
-                      <grid id="97789" layout-manager="GridLayoutManager" row-count="1" column-count="2" same-size-horizontally="false" same-size-vertically="false" hgap="0" vgap="-1">
+                      <grid id="97789" layout-manager="GridLayoutManager" row-count="1" column-count="3" same-size-horizontally="false" same-size-vertically="false" hgap="0" vgap="-1">
                         <margin top="0" left="0" bottom="0" right="0"/>
                         <constraints>
                           <grid row="1" column="0" row-span="1" col-span="1" vsize-policy="0" hsize-policy="3" anchor="0" fill="3" indent="0" use-parent-layout="false"/>
@@ -81,10 +81,18 @@
                           </component>
                           <component id="15286" class="javax.swing.JButton" binding="removeProcessorButton">
                             <constraints>
-                              <grid row="0" column="1" row-span="1" col-span="1" vsize-policy="0" hsize-policy="3" anchor="0" fill="1" indent="0" use-parent-layout="false"/>
+                              <grid row="0" column="2" row-span="1" col-span="1" vsize-policy="0" hsize-policy="3" anchor="0" fill="1" indent="0" use-parent-layout="false"/>
                             </constraints>
                             <properties>
                               <text value="Remove"/>
+                            </properties>
+                          </component>
+                          <component id="cd100" class="javax.swing.JButton" binding="dispButton">
+                            <constraints>
+                              <grid row="0" column="1" row-span="1" col-span="1" vsize-policy="0" hsize-policy="3" anchor="0" fill="1" indent="0" use-parent-layout="false"/>
+                            </constraints>
+                            <properties>
+                              <text value="Display Toggle"/>
                             </properties>
                           </component>
                         </children>
